--- a/umap/static/umap/locale/ca.json
+++ b/umap/static/umap/locale/ca.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Click last point to finish shape",
     "Click to add a marker": "Feu clic per a afegir una marca",
     "Click to continue drawing": "Click to continue drawing",
-    "Click to edit": "Click to edit",
     "Click to start drawing a line": "Click to start drawing a line",
     "Click to start drawing a polygon": "Click to start drawing a polygon",
     "Clone of {name}": "Clona de {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Enllaç amb text:  [[https://example.com|text de l'enllaç]]",
     "Long credits": "Crèdits llargs",
     "Longitude": "Longitud",
-    "Make main shape": "Make main shape",
     "Manage layers": "Gestiona les capes",
     "Manual": "Manual",
     "Map background credits": "Crèdits del fons del mapa",
@@ -285,7 +283,6 @@
     "Quantiles": "Quantiles",
     "Recent": "Recent",
     "Remote data": "Dades remotes",
-    "Remove shape from the multi": "Remove shape from the multi",
     "Replace layer content": "Replace layer content",
     "Restore this version": "Restore this version",
     "Save current edits": "Desa les edicions actuals",
@@ -580,5 +577,43 @@
     "Manage Fields": "Manage Fields",
     "Rename this field": "Rename this field",
     "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Double click to edit the name": "Double click to edit the name",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
