--- a/umap/static/umap/locale/cs_CZ.json
+++ b/umap/static/umap/locale/cs_CZ.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Klikněte na poslední bod pro dokončení tvaru",
     "Click to add a marker": "Kliknutím přidáš značku",
     "Click to continue drawing": "Kliknutím můžeš pokračovat v kreslení",
-    "Click to edit": "Klikněte pro úpravy",
     "Click to start drawing a line": "Klikněte pro začátek kreslení čáry",
     "Click to start drawing a polygon": "Klikněte pro začátek kreslení polygonu",
     "Clone of {name}": "Klon objektu {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Odkaz s textem: [[https://priklad.cz|text odkazu]]",
     "Long credits": "Dlouhý text autorství",
     "Longitude": "Délka",
-    "Make main shape": "Učinit hlavním tvarem",
     "Manage layers": "Spravovat vrstvy",
     "Manual": "Ručně",
     "Map background credits": "Autorství pozadí mapy",
@@ -285,7 +283,6 @@
     "Quantiles": "Kvantily",
     "Recent": "Nedávné",
     "Remote data": "Vzdálená data",
-    "Remove shape from the multi": "Odebrat tvar z multi",
     "Replace layer content": "Nahradit obsah vrstvy",
     "Restore this version": "Obnovit tuto verzi",
     "Save current edits": "Ulož nedávné změny",
@@ -580,5 +577,43 @@
     "Manage Fields": "Manage Fields",
     "Rename this field": "Rename this field",
     "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Double click to edit the name": "Double click to edit the name",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
