--- a/umap/static/umap/locale/eu.json
+++ b/umap/static/umap/locale/eu.json
@@ -1,6 +1,6 @@
 {
-    "(area: {measure})": "(area: {measure})",
-    "(length: {measure})": "(length: {measure})",
+    "(area: {measure})": "(azalera: {measure})",
+    "(length: {measure})": "(luzera: {measure})",
     "# one hash for main heading": "# traola bat goiburu nagusirako",
     "## two hashes for second heading": "## bi traola bigarren goibururako",
     "### three hashes for third heading": "### hiru traola hirugarren goibururako",
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Egin klik azken puntuan forma amaitzeko",
     "Click to add a marker": "Egin klik markagailu bat gehitzeko",
     "Click to continue drawing": "Egin klik marrazten jarraitzeko",
-    "Click to edit": "Egin klik editatzeko",
     "Click to start drawing a line": "Egin klik lerro bat marrazten hasteko",
     "Click to start drawing a polygon": "Egin klik poligono bat marrazten hasteko",
     "Clone of {name}": "{name}-ren klona",
@@ -173,12 +172,12 @@
     "Icon shape": "Ikonoaren forma",
     "Icon symbol": "Ikonoaren ikurra",
     "If false, the polygon or line will act as a part of the underlying map.": "Gezurra bada, poligonoak edo lerroak azpiko maparen zati gisa jardungo du.",
-    "Iframe with custom height (in px): {{{https://iframe.url.com|height}}}": "Iframe with custom height (in px): {{{https://iframe.url.com|height}}}",
-    "Iframe with custom height and width (in px): {{{https://iframe.url.com|height*width}}}": "Iframe with custom height and width (in px): {{{https://iframe.url.com|height*width}}}",
+    "Iframe with custom height (in px): {{{https://iframe.url.com|height}}}": "Altuera pertsonalizatua duen markoa (px-tan):: {{{https://iframe.url.com|height}}}",
+    "Iframe with custom height and width (in px): {{{https://iframe.url.com|height*width}}}": "Altuera eta zabalera pertsonalizatua duen markoa (px-tan): {{{https://iframe.url.com|height*width}}}",
     "iframe": "markoa",
-    "Iframe: {{{https://iframe.url.com}}}": "Iframe: {{{https://iframe.url.com}}}",
-    "Image with custom width (in px): {{https://image.url.com|width}}": "Image with custom width (in px): {{https://image.url.com|width}}",
-    "Image: {{https://image.url.com}}": "Image: {{https://image.url.com}}",
+    "Iframe: {{{https://iframe.url.com}}}": "Markoa: {{{https://iframe.url.com}}}",
+    "Image with custom width (in px): {{https://image.url.com|width}}": "Zabalera pertsonalizatua duen irudia (px-tan): {{https://image.url.com|width}}",
+    "Image: {{https://image.url.com}}": "Irudia: {{https://image.url.com}}",
     "Import data": "Inportatu datuak",
     "Import in a new layer": "Inportatu geruza berri batean",
     "Imports all umap data, including layers and settings.": "Umap-en datu guztiak inportatzen ditu, geruzak eta ezarpenak barne.",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Testua duen esteka: [[https://adibidez.com|estekaren testua]]",
     "Long credits": "Kreditu luzeak",
     "Longitude": "Longitudea",
-    "Make main shape": "Egin forma nagusia",
     "Manage layers": "Kudeatu geruzak",
     "Manual": "Eskuliburua",
     "Map background credits": "Maparen atzeko planoaren kredituak",
@@ -285,7 +283,6 @@
     "Quantiles": "Kuantilak",
     "Recent": "Duela gutxikoa",
     "Remote data": "Urrutiko datuak",
-    "Remove shape from the multi": "Kendu forma multitik",
     "Replace layer content": "Ordeztu geruzaren edukia",
     "Restore this version": "Berreskuratu bertsio hau",
     "Save current edits": "Gorde uneko aldaketak",
@@ -521,16 +518,16 @@
     "Edit map default view": "Mapa editatzeko lehenetsitako ikuspegia",
     "Use current center and zoom": "Erabili uneko erdigunea eta zooma",
     "Layer permalink": "Layer permalink",
-    "Back to home": "Back to home",
-    "Home logo": "Home logo",
-    "Add this geometry to my map": "Add this geometry to my map",
-    "Add this place to my map": "Add this place to my map",
-    "Cancel last edit": "Cancel last edit",
-    "Redo last edit": "Redo last edit",
-    "Links": "Links",
-    "Images": "Images",
+    "Back to home": "Bueltatu hasierara",
+    "Home logo": "Tokiko logoa",
+    "Add this geometry to my map": "Gehitu geometria hau nire mapara",
+    "Add this place to my map": "Gehitu toki hau nire mapan",
+    "Cancel last edit": "Desegin azken edizioa",
+    "Redo last edit": "Berregin azken edizioa",
+    "Links": "Estekak",
+    "Images": "Irudiak",
     "Iframes": "Iframes",
-    "Tags": "Tags",
+    "Tags": "Etiketak",
     "Geocode": "Geocode",
     "Display the back to home icon": "Display the back to home icon",
     "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
@@ -538,47 +535,85 @@
     "Back to list": "Back to list",
     "Toggle rule": "Toggle rule",
     "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
+    "Cannot save layer, please try again in a few minutes.": "Ezin da geruza gorde, saiatu berriro minutu batzuk barru.",
     "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
     "More help resources": "More help resources",
-    "This map is a template": "This map is a template",
-    "Add text along path": "Add text along path",
-    "Text color": "Text color",
+    "This map is a template": "Mapa hau txantiloi bat da",
+    "Add text along path": "Gehitu testua bidean zehar",
+    "Text color": "Testuaren kolorea",
     "Text offset": "Text offset",
-    "Text position": "Text position",
+    "Text position": "Testuaren kokapena",
     "start": "start",
     "center": "center",
     "end": "end",
-    "Text repeat": "Text repeat",
-    "Text rotate": "Text rotate",
-    "Text size": "Text size",
-    "Load map template": "Load map template",
-    "My templates": "My templates",
+    "Text repeat": "Testuaren errepikapena",
+    "Text rotate": "Testuaren biraketa",
+    "Text size": "Testuaren tamaina",
+    "Load map template": "Kargatu txantiloi mapa",
+    "My templates": "Nire txantiloiak",
     "From staff": "From staff",
     "From community": "From community",
-    "You must select a template.": "You must select a template.",
+    "You must select a template.": "Txantiloi bat aukeratu behar duzu",
     "Line decoration": "Line decoration",
     "Reuse this template": "Reuse this template",
-    "Create a new map using this template": "Create a new map using this template",
-    "Save template": "Save template",
-    "Load template": "Load template",
-    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
-    "Load template with data": "Load template with data",
+    "Create a new map using this template": "Sortu mapa berri bat txantiloi hau erabiliz",
+    "Save template": "Gorde txantiloia",
+    "Load template": "Kargatu txantiloia",
+    "Loading a template will apply predefined styles and settings to your map": "Txantiloi bat kargatzean, aurrez definitutako estiloak eta ezarpenak aplikatuko zaizkio mapari",
+    "Load template with data": "Kargatu txantiloia datuekin",
     "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
     "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
     "There is no public template yet.": "There is no public template yet.",
     "Explore": "Explore",
     "Import data from public open data portals": "Import data from public open data portals",
     "Choose a portal": "Choose a portal",
-    "Limit results to current map view": "Limit results to current map view",
-    "Please choose an instance first.": "Please choose an instance first.",
+    "Limit results to current map view": "Mugatu emaitzak uneko maparen ikuspegira",
+    "Please choose an instance first.": "Mesedez, lehendabizi instantzia bat aukeratu.",
     "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
-    "Add a new field": "Add a new field",
-    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
-    "Please enter the new name of this field": "Please enter the new name of this field",
+    "Add a new field": "Gehitu eremu berri bat",
+    "Are you sure you want to delete this field on all the features?": "Ziur zaude eremu hau ezabatu nahi duzula funtzio guztietan?",
+    "Please enter the new name of this field": "Eman izen berri bat eremu honi",
     "Cannot process MultiPoint": "Cannot process MultiPoint",
-    "Manage Fields": "Manage Fields",
-    "Rename this field": "Rename this field",
-    "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Manage Fields": "Kudeatu eremuak",
+    "Rename this field": "Berrizendatu eremu hau",
+    "Delete this field": "Ezabatu eremu hau",
+    "Double click to edit the name": "Egin klik bikoitza izena editatzeko",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
