--- a/umap/static/umap/locale/fr.json
+++ b/umap/static/umap/locale/fr.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Cliquer sur le dernier point pour finir le tracé",
     "Click to add a marker": "Cliquer pour ajouter le marqueur",
     "Click to continue drawing": "Cliquer pour continuer le tracé",
-    "Click to edit": "Cliquer pour modifier",
     "Click to start drawing a line": "Cliquer pour commencer une ligne",
     "Click to start drawing a polygon": "Cliquer pour commencer un polygone",
     "Clone of {name}": "Clone de {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Lien avec texte : [[https://example.com|titre du lien]]",
     "Long credits": "Crédit",
     "Longitude": "Longitude",
-    "Make main shape": "Tracé principal",
     "Manage layers": "Gérer les calques",
     "Manual": "Manuel",
     "Map background credits": "Crédits pour le fond de carte",
@@ -285,7 +283,6 @@
     "Quantiles": "Quantiles",
     "Recent": "Récents",
     "Remote data": "Données distantes",
-    "Remove shape from the multi": "Supprimer ce tracé du groupe",
     "Replace layer content": "Remplacer le contenu du calque",
     "Restore this version": "Restaurer cette version",
     "Save current edits": "Enregistrer les changements courants",
@@ -580,5 +577,43 @@
     "Manage Fields": "Gérer les champs",
     "Rename this field": "Renommer ce champ",
     "Delete this field": "Supprimer ce champ",
-    "Double click to edit the name": "Double-cliquer pour modifier le nom"
+    "Double click to edit the name": "Double-cliquer pour modifier le nom",
+    "Print map": "Imprimer la carte",
+    "Choose a format": "Choisir un format",
+    "Scale map": "Choisir l'échelle",
+    "portrait": "portrait",
+    "landscape": "paysage",
+    "Print": "Imprimer",
+    "Preparing the print…": "Impression en préparation…",
+    "Large Circle": "Grand Cercle",
+    "Icon size": "Taille de l'icône",
+    "Will only affect raw and large circle icons.": "Affecte seulement les images brutes et les grands cercles.",
+    "Route": "Route",
+    "Display the print control": "Afficher le bouton d'impression",
+    "Compute isochrone from here": "Isochrone depuis ce point",
+    "Route settings": "Réglages de la route",
+    "Transform to regular line": "Transformer en ligne simple",
+    "Transform to route": "Transformer en route",
+    "Restore route": "Rétablir la route",
+    "Compute elevation": "Récupérer les altitudes",
+    "Profile": "Moyen de transport",
+    "Compute elevations": "Récupérer les altitudes",
+    "Route preference": "Préférence de routage",
+    "Compute route": "Calculer la route",
+    "Walking": "Marche",
+    "Hiking": "Randonnée",
+    "By car": "Voiture",
+    "Cycling": "Vélo",
+    "Wheelchair": "Fauteuil roulant",
+    "Recommended": "Recommandé",
+    "Fastest": "Plus rapide",
+    "Shortest": "Plus court",
+    "Max time (in minutes)": "Temps max (en minutes)",
+    "Number of lines": "Nombre de lignes",
+    "Distance:": "Distance :",
+    "Gain:": "Dénivelé positif :",
+    "Loss:": "Dénivelé négatif :",
+    "Altitude:": "Altitude :",
+    "Right-click to edit": "Clic droit pour éditer",
+    "Draw along routes": "Dessiner en suivant les routes"
 }
