--- a/umap/static/umap/locale/pt_PT.json
+++ b/umap/static/umap/locale/pt_PT.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Clique no último ponto para terminar a forma geométrica",
     "Click to add a marker": "Clique para adicionar um marcador",
     "Click to continue drawing": "Clique para continuar a desenhar",
-    "Click to edit": "Clique para editar",
     "Click to start drawing a line": "Clique para começar a desenhar uma linha",
     "Click to start drawing a polygon": "Clique para começar a desenhar um polígono",
     "Clone of {name}": "Clone de {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Link with text: [[https://example.com|text of the link]]",
     "Long credits": "Créditos por extenso",
     "Longitude": "Longitude",
-    "Make main shape": "Fazer forma geométrica principal",
     "Manage layers": "Gerir camadas",
     "Manual": "Manual",
     "Map background credits": "Créditos do fundo do mapa",
@@ -285,7 +283,6 @@
     "Quantiles": "Quantis",
     "Recent": "Recente",
     "Remote data": "Dados remotos",
-    "Remove shape from the multi": "Remover forma do multi",
     "Replace layer content": "Substituir o conteúdo da camada",
     "Restore this version": "Restaurar esta versão",
     "Save current edits": "Guardar edições atuais",
@@ -580,5 +577,43 @@
     "Manage Fields": "Manage Fields",
     "Rename this field": "Rename this field",
     "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Double click to edit the name": "Double click to edit the name",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
