--- a/umap/static/umap/locale/zh_TW.json
+++ b/umap/static/umap/locale/zh_TW.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "點下最後一點後完成外形",
     "Click to add a marker": "點選以新增標記",
     "Click to continue drawing": "點擊以繼續繪製",
-    "Click to edit": "點擊開始編輯",
     "Click to start drawing a line": "點擊以開始繪製直線",
     "Click to start drawing a polygon": "點選開始繪製多邊形",
     "Clone of {name}": "複製 {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "有文字的連結：[[https://example.com|text of the link]]",
     "Long credits": "詳細工作人員名單",
     "Longitude": "經度",
-    "Make main shape": "設為主要外形",
     "Manage layers": "管理圖層",
     "Manual": "手動",
     "Map background credits": "地圖背景取自",
@@ -285,7 +283,6 @@
     "Quantiles": "數量",
     "Recent": "目前",
     "Remote data": "遠端資料",
-    "Remove shape from the multi": "移除外形",
     "Replace layer content": "取代圖層內容",
     "Restore this version": "回復此版本",
     "Save current edits": "儲存近期的變更",
@@ -521,64 +518,102 @@
     "Edit map default view": "編輯地圖預設檢視",
     "Use current center and zoom": "使用目前中心與縮放大小",
     "Layer permalink": "圖層永久連結",
-    "Back to home": "Back to home",
-    "Home logo": "Home logo",
-    "Add this geometry to my map": "Add this geometry to my map",
-    "Add this place to my map": "Add this place to my map",
-    "Cancel last edit": "Cancel last edit",
-    "Redo last edit": "Redo last edit",
-    "Links": "Links",
-    "Images": "Images",
-    "Iframes": "Iframes",
-    "Tags": "Tags",
-    "Geocode": "Geocode",
-    "Display the back to home icon": "Display the back to home icon",
-    "Do you want to display layer switcher in caption bar?": "Do you want to display layer switcher in caption bar?",
-    "Simplify all geometries to points": "Simplify all geometries to points",
-    "Back to list": "Back to list",
-    "Toggle rule": "Toggle rule",
-    "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
-    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
-    "More help resources": "More help resources",
-    "This map is a template": "This map is a template",
-    "Add text along path": "Add text along path",
-    "Text color": "Text color",
-    "Text offset": "Text offset",
-    "Text position": "Text position",
-    "start": "start",
-    "center": "center",
-    "end": "end",
-    "Text repeat": "Text repeat",
-    "Text rotate": "Text rotate",
-    "Text size": "Text size",
-    "Load map template": "Load map template",
-    "My templates": "My templates",
-    "From staff": "From staff",
-    "From community": "From community",
-    "You must select a template.": "You must select a template.",
-    "Line decoration": "Line decoration",
-    "Reuse this template": "Reuse this template",
-    "Create a new map using this template": "Create a new map using this template",
-    "Save template": "Save template",
-    "Load template": "Load template",
-    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
-    "Load template with data": "Load template with data",
-    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
-    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
-    "There is no public template yet.": "There is no public template yet.",
-    "Explore": "Explore",
-    "Import data from public open data portals": "Import data from public open data portals",
-    "Choose a portal": "Choose a portal",
-    "Limit results to current map view": "Limit results to current map view",
-    "Please choose an instance first.": "Please choose an instance first.",
-    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
-    "Add a new field": "Add a new field",
-    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
-    "Please enter the new name of this field": "Please enter the new name of this field",
-    "Cannot process MultiPoint": "Cannot process MultiPoint",
-    "Manage Fields": "Manage Fields",
-    "Rename this field": "Rename this field",
-    "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Back to home": "回到首頁",
+    "Home logo": "首頁 logo",
+    "Add this geometry to my map": "新增此一幾何到我的地圖",
+    "Add this place to my map": "新增這一地點到我的地圖",
+    "Cancel last edit": "取消最後編輯",
+    "Redo last edit": "重覆最後編輯",
+    "Links": "連結",
+    "Images": "影像",
+    "Iframes": "內崁頁面",
+    "Tags": "標籤",
+    "Geocode": "地理代碼",
+    "Display the back to home icon": "顯示回到首頁圖示",
+    "Do you want to display layer switcher in caption bar?": "你想要標題列顯示圖層切換嗎？",
+    "Simplify all geometries to points": "簡化所有幾何圖形變成節點",
+    "Back to list": "回到清單",
+    "Toggle rule": "套用規則",
+    "Delete rule": "刪除規則",
+    "Cannot save layer, please try again in a few minutes.": "無法儲存圖層，請幾分鐘之後再試一次。",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "在這一份地圖啟用共同即時編輯，其他使用者必須在啟用這項設定後重新載入地圖。",
+    "More help resources": "更多幫助資源",
+    "This map is a template": "這份地圖是模版",
+    "Add text along path": "延著路徑新增文字",
+    "Text color": "文字顏色",
+    "Text offset": "文字偏移",
+    "Text position": "文字位置",
+    "start": "開始",
+    "center": "中間",
+    "end": "結尾",
+    "Text repeat": "文字重覆",
+    "Text rotate": "文字旋轉",
+    "Text size": "文字大小",
+    "Load map template": "載入地圖模版",
+    "My templates": "我的模版",
+    "From staff": "從職員",
+    "From community": "從社群",
+    "You must select a template.": "你必須選擇模版。",
+    "Line decoration": "線段修飾",
+    "Reuse this template": "重覆使用這份模版",
+    "Create a new map using this template": "使用這份模版新增地圖",
+    "Save template": "儲存模版",
+    "Load template": "載入模版",
+    "Loading a template will apply predefined styles and settings to your map": "載入模版將會套用預先定義的樣式與設定到你的地圖上",
+    "Load template with data": "連同資料載入模版",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "你還沒有已註冊的模版，你可以透過新增地圖並且標示為「模版」來新增。",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "仍沒有建議模版，建議模版為uMap管理員打星號的模版。",
+    "There is no public template yet.": "仍沒有公開模版。",
+    "Explore": "瀏覽",
+    "Import data from public open data portals": "從公共開放資料平台匯入資料",
+    "Choose a portal": "選擇平台",
+    "Limit results to current map view": "限制結果為目前地圖檢視",
+    "Please choose an instance first.": "請先選擇站臺。",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "沒有找到地理欄位：必須是`lat(itude)`與 `lon(gitude)` 或者 `geom(etry)`。",
+    "Add a new field": "新增欄位",
+    "Are you sure you want to delete this field on all the features?": "你確定要從所有圖徵刪除這個欄位？",
+    "Please enter the new name of this field": "請新增這個欄位的新名稱",
+    "Cannot process MultiPoint": "無法處理多重點",
+    "Manage Fields": "管理欄位",
+    "Rename this field": "重新命名這一欄位",
+    "Delete this field": "刪除這一欄位",
+    "Double click to edit the name": "按兩下來編輯名稱",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
