--- a/umap/static/umap/locale/br.json
+++ b/umap/static/umap/locale/br.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Klikañ war ar poent diwezhañ evit echuiñ an tres",
     "Click to add a marker": "Klikañ evit ouzhpennañ ur valizenn",
     "Click to continue drawing": "Klikañ evit kenderc'hel da dresañ",
-    "Click to edit": "Klikañ evit aozañ",
     "Click to start drawing a line": "Klikañ evit tresañ ul linenn",
     "Click to start drawing a polygon": "Klikañ evit tresañ ul lieskorn",
     "Clone of {name}": "Eilenn eus {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Liamm gant testenn: [[https://skouer.bzh|testenn al liamm]]",
     "Long credits": "Kredadoù hir",
     "Longitude": "Hedred",
-    "Make main shape": "Tres pennañ",
     "Manage layers": "Merañ ar gwiskadoù",
     "Manual": "Sturlevr",
     "Map background credits": "Kredadoù foñs ar gartenn",
@@ -285,7 +283,6 @@
     "Quantiles": "Kwantiloù",
     "Recent": "Nevez zo",
     "Remote data": "Roadennoù a-bell",
-    "Remove shape from the multi": "Tennañ ar furm diouzh ar strollad",
     "Replace layer content": "Erlec'hiañ endalc'had ar gwiskad",
     "Restore this version": "Adsevel ar stumm-mañ?",
     "Save current edits": "Enrollañ ar c'hemmoù a-vremañ ",
@@ -580,5 +577,43 @@
     "Manage Fields": "Manage Fields",
     "Rename this field": "Rename this field",
     "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Double click to edit the name": "Double click to edit the name",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
