--- a/umap/static/umap/locale/da.json
+++ b/umap/static/umap/locale/da.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Klik på det det sidste punkt for at afslutte figur",
     "Click to add a marker": "Klik for at tilføje en markør",
     "Click to continue drawing": "Klik for at fortsætte indtegning",
-    "Click to edit": "Klik for at redigere",
     "Click to start drawing a line": "Klik for at starte indtegning af linje",
     "Click to start drawing a polygon": "Klik for at starte indtegning af polygon",
     "Clone of {name}": "Klon af {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Link med tekst: [[https://example.com|tekst for link]]",
     "Long credits": "Lang kreditering",
     "Longitude": "Breddegrader",
-    "Make main shape": "Gør til primær figur",
     "Manage layers": "Håndter lag",
     "Manual": "Manuel",
     "Map background credits": "Baggrundskortkreditering",
@@ -285,7 +283,6 @@
     "Quantiles": "Kvantiler",
     "Recent": "Seneste",
     "Remote data": "Fjerndata",
-    "Remove shape from the multi": "Fjern figur fra multi",
     "Replace layer content": "Erstat lags indhold",
     "Restore this version": "Genskab denne version",
     "Save current edits": "Gem nuværende redigeringer",
@@ -572,13 +569,51 @@
     "Choose a portal": "Vælg en portal",
     "Limit results to current map view": "Begræns resultaterne til den aktuelle kortvisning",
     "Please choose an instance first.": "Vælg en instans først.",
-    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
-    "Add a new field": "Add a new field",
-    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
-    "Please enter the new name of this field": "Please enter the new name of this field",
-    "Cannot process MultiPoint": "Cannot process MultiPoint",
-    "Manage Fields": "Manage Fields",
-    "Rename this field": "Rename this field",
-    "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "Ingen geo-kolonne fundet: skal være enten `lat(itude)` og `lon(gitude)` eller `geom(etry)`.",
+    "Add a new field": "Tilføj et nyt felt",
+    "Are you sure you want to delete this field on all the features?": "Er du sikker på, at du vil slette dette felt på alle objekter?",
+    "Please enter the new name of this field": "Indtast det nye navn på dette felt",
+    "Cannot process MultiPoint": "Kan ikke bearbejde MultiPoint",
+    "Manage Fields": "Administrer felter",
+    "Rename this field": "Omdøb dette felt",
+    "Delete this field": "Slet dette felt",
+    "Double click to edit the name": "Dobbeltklik for at redigere navnet",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
