--- a/umap/static/umap/locale/fa_IR.json
+++ b/umap/static/umap/locale/fa_IR.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "برای تکمیل شکل روی آخرین نقطه کلیک کنید",
     "Click to add a marker": "برای افزودن نشانگر کلیک کنید",
     "Click to continue drawing": "برای ادامهٔ ترسیم کلیک کنید",
-    "Click to edit": "برای ویرایش کلیک کنید",
     "Click to start drawing a line": "برای شروع رسم خط کلیک کنید",
     "Click to start drawing a polygon": "برای شروع ترسیم چندضلعی کلیک کنید",
     "Clone of {name}": "همانندساخته از {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Link with text: [[https://example.com|text of the link]]",
     "Long credits": "یادکردهای بلند",
     "Longitude": "طول جغرافیایی",
-    "Make main shape": "شکل اصلی را ایجاد کنید",
     "Manage layers": "مدیریت لایه‌ها",
     "Manual": "دستی",
     "Map background credits": "یادکردهای پس‌زمینهٔ نقشه",
@@ -285,7 +283,6 @@
     "Quantiles": "چندک‌ها",
     "Recent": "اخیر",
     "Remote data": "دادهٔ دوردست",
-    "Remove shape from the multi": "حذف شکل از مولتی",
     "Replace layer content": "جایگزینی محتوای لایه",
     "Restore this version": "بازیابی این نسخه",
     "Save current edits": "ویرایش‌های جاری را ذخیره کنید",
@@ -580,5 +577,43 @@
     "Manage Fields": "Manage Fields",
     "Rename this field": "Rename this field",
     "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Double click to edit the name": "Double click to edit the name",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
