--- a/umap/static/umap/locale/it.json
+++ b/umap/static/umap/locale/it.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Click su ultimo punto per completare la geometria",
     "Click to add a marker": "Clicca per aggiungere un marcatore",
     "Click to continue drawing": "Clic per continuare a disegnare",
-    "Click to edit": "Clic per la modifica",
     "Click to start drawing a line": "Clic per iniziare a disegnare una linea",
     "Click to start drawing a polygon": "Clicca per iniziare a disegnare un poligono",
     "Clone of {name}": "Clone di {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Collegamento con testo: [[https://esempio.it|testo del collegamento]]",
     "Long credits": "Ringraziamenti estesi",
     "Longitude": "Longitudine",
-    "Make main shape": "Genera geometria generale",
     "Manage layers": "Gestisci layer",
     "Manual": "Manuale",
     "Map background credits": "Riconoscimenti per la mappa di sfondo",
@@ -285,7 +283,6 @@
     "Quantiles": "Quantili",
     "Recent": "Recente",
     "Remote data": "Dati remoti",
-    "Remove shape from the multi": "Rimuovi geometria dalle altre",
     "Replace layer content": "Sostituisci il contenuto del layer",
     "Restore this version": "Ripristina questa versione",
     "Save current edits": "Salva le modifiche effettuate",
@@ -580,5 +577,43 @@
     "Manage Fields": "Manage Fields",
     "Rename this field": "Rename this field",
     "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Double click to edit the name": "Double click to edit the name",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
