--- a/umap/static/umap/locale/pl.json
+++ b/umap/static/umap/locale/pl.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Kliknij ostatni punkt, aby zakończyć rysowanie",
     "Click to add a marker": "Kliknij, aby dodać znacznik",
     "Click to continue drawing": "Kliknij, aby kontynuować rysowanie",
-    "Click to edit": "Kliknij, aby edytować",
     "Click to start drawing a line": "Kliknij, aby zacząć rysować linię",
     "Click to start drawing a polygon": "Kliknij, aby zacząć rysować obszar",
     "Clone of {name}": "Sklonowane z {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Link with text: [[https://example.com|text of the link]]",
     "Long credits": "Długie źródło",
     "Longitude": "Długość geograficzna",
-    "Make main shape": "Narysuj główny kształt",
     "Manage layers": "Zarządzaj warstwami",
     "Manual": "Manual",
     "Map background credits": "Źródło tła mapy",
@@ -285,7 +283,6 @@
     "Quantiles": "Kwantyle",
     "Recent": "Ostatnie",
     "Remote data": "Zdalne dane",
-    "Remove shape from the multi": "Usuń figurę z wybranego obszaru",
     "Replace layer content": "Zamień zawartość warstwy",
     "Restore this version": "Przywróć tę wersję",
     "Save current edits": "Zapisz obecne edycje",
@@ -580,5 +577,43 @@
     "Manage Fields": "Manage Fields",
     "Rename this field": "Rename this field",
     "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Double click to edit the name": "Double click to edit the name",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
