--- a/umap/static/umap/locale/ru.json
+++ b/umap/static/umap/locale/ru.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Щёлкните на последней точке, чтобы завершить",
     "Click to add a marker": "Щёлкните, чтобы добавить метку",
     "Click to continue drawing": "Щёлкайте, чтобы продолжить рисование",
-    "Click to edit": "Щёлкните, чтобы изменить",
     "Click to start drawing a line": "Щёлкните, чтобы начать рисование линии",
     "Click to start drawing a polygon": "Щёлкните, чтобы начать рисование полигона",
     "Clone of {name}": "Копия {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Link with text: [[https://example.com|text of the link]]",
     "Long credits": "Полное описание прав",
     "Longitude": "Долгота",
-    "Make main shape": "Сделать главной фигурой",
     "Manage layers": "Управление слоями",
     "Manual": "Manual",
     "Map background credits": "Права на фоновый слой карты",
@@ -285,7 +283,6 @@
     "Quantiles": "Quantiles",
     "Recent": "Recent",
     "Remote data": "Данные с удаленного сервера",
-    "Remove shape from the multi": "Удалить фигуру из мультиполигона",
     "Replace layer content": "Заменить содержимое слоя",
     "Restore this version": "Восстановить эту версию",
     "Save current edits": "Сохранить текущие правки",
@@ -580,5 +577,43 @@
     "Manage Fields": "Manage Fields",
     "Rename this field": "Rename this field",
     "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Double click to edit the name": "Double click to edit the name",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
