--- a/umap/static/umap/locale/sv.json
+++ b/umap/static/umap/locale/sv.json
@@ -57,7 +57,6 @@
     "Click last point to finish shape": "Klicka på sista punkten för att slutföra formen",
     "Click to add a marker": "Klicka för att lägga till en markör",
     "Click to continue drawing": "Klicka för att fortsätta rita",
-    "Click to edit": "Klicka för att redigera",
     "Click to start drawing a line": "Klicka för att börja rita en linje",
     "Click to start drawing a polygon": "Klicka för att börja rita en polygon",
     "Clone of {name}": "Kopia av {name}",
@@ -209,7 +208,6 @@
     "Link with text: [[https://example.com|text of the link]]": "Link with text: [[https://example.com|text of the link]]",
     "Long credits": "Upphov och erkännanden (sidfotsfält)",
     "Longitude": "Longitud",
-    "Make main shape": "Gör huvudformen",
     "Manage layers": "Hantera lager",
     "Manual": "Manual",
     "Map background credits": "Bakgrundskartans upphov och erkännanden",
@@ -285,7 +283,6 @@
     "Quantiles": "Quantiles",
     "Recent": "Recent",
     "Remote data": "Fjärrdata",
-    "Remove shape from the multi": "Radera figuren från aktuell multi",
     "Replace layer content": "Ersätt lagrets innehåll",
     "Restore this version": "Återställ denna version",
     "Save current edits": "Spara nuvarande ändringar",
@@ -580,5 +577,43 @@
     "Manage Fields": "Manage Fields",
     "Rename this field": "Rename this field",
     "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name"
+    "Double click to edit the name": "Double click to edit the name",
+    "Print map": "Print map",
+    "Choose a format": "Choose a format",
+    "Scale map": "Scale map",
+    "portrait": "portrait",
+    "landscape": "landscape",
+    "Print": "Print",
+    "Preparing the print…": "Preparing the print…",
+    "Large Circle": "Large Circle",
+    "Icon size": "Icon size",
+    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Route": "Route",
+    "Display the print control": "Display the print control",
+    "Compute isochrone from here": "Compute isochrone from here",
+    "Route settings": "Route settings",
+    "Transform to regular line": "Transform to regular line",
+    "Transform to route": "Transform to route",
+    "Restore route": "Restore route",
+    "Compute elevation": "Compute elevation",
+    "Profile": "Profile",
+    "Compute elevations": "Compute elevations",
+    "Route preference": "Route preference",
+    "Compute route": "Compute route",
+    "Walking": "Walking",
+    "Hiking": "Hiking",
+    "By car": "By car",
+    "Cycling": "Cycling",
+    "Wheelchair": "Wheelchair",
+    "Recommended": "Recommended",
+    "Fastest": "Fastest",
+    "Shortest": "Shortest",
+    "Max time (in minutes)": "Max time (in minutes)",
+    "Number of lines": "Number of lines",
+    "Distance:": "Distance:",
+    "Gain:": "Gain:",
+    "Loss:": "Loss:",
+    "Altitude:": "Altitude:",
+    "Right-click to edit": "Right-click to edit",
+    "Draw along routes": "Draw along routes"
 }
